--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  camera: ^0.11.0+2
+  permission_handler: ^10.2.0
+  gallery_saver: ^2.3.2
+  path_provider: ^2.1.1
+  image_picker: 0.8.6+1
 
 dev_dependencies:
   flutter_test:
@@ -96,3 +101,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+dependency_overrides:
+  gallery_saver:
+    path: /Users/sigi/.pub-cache/hosted/pub.dev/gallery_saver-2.3.2/
